# vibePy

./: .gitignore  AI_EDITING.md  CHANGELOG.md  README.ko.md  README.md  RELEASE.md  SPEC.md  VIBEWEB.md  crm.db  pyproject.toml  todo.db
.github/workflows/: ci.yml
docs/: index.html
docs/crm/: crm.vweb.json
docs/pm/: pm.vweb.json
docs/realestate/: realestate.vweb.json
examples/: echo.vbl  echo.vbl.json  index.html
examples/agent/: generated.vbl.json  prompt.txt  report.json
examples/api-call/: README.md  api_call.vbl.json  bearer_auth.vbl.json  custom_headers.vbl.json  get_json.vbl.json  get_query_params.vbl.json  post_json.vbl.json  timeout_retry.vbl.json
examples/crm/: README.md  crm.advanced.vweb.json  crm.vweb.json
examples/education/: education.vweb.json
examples/healthcare/: healthcare.vweb.json
examples/inventory/: inventory.vweb.json
examples/shop/: shop.vweb.json
examples/todo/: todo.vweb.json
scripts/: check_version.py  run_glm47_server.sh
tests/: test_conditions.py  test_flow.py
vibelang/: __init__.py  __main__.py  cli.py  compiler.py  ir.py  parser.py  runtime.py  std.py
vibeweb/: __init__.py  __main__.py  actions.py  ai.py  cli.py  conditions.py  db.py  gallery.py  server.py  spec.py  version.py
vibeweb/static/: style.css
