[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibepy"
version = "0.1.0"
description = "VibePy: JSON-first, AI-friendly stack with VibeLang and VibeWeb."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "UNLICENSED"}
authors = [{name = "VibePy"}]

[tool.setuptools]
packages = ["vibelang", "vibeweb"]

[tool.setuptools.package-data]
vibeweb = ["static/*"]
